# kaggle-getting-started

./: .gitignore  .ipynb_kernel_config.json  README.md  pyproject.toml  requirements.txt
Titanic-ML/: Titanic_machine_learning.ipynb  final_titanic_data.csv  random_forest_model.pkl  titanic_predictions.csv  voting_classifier_model.pkl
