[project]
name = "kaggle-getting-started"
version = "0.1.0"
description = ""
authors = [
    {name = "Subhopam Das",email = "subhopam@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "notebook (>=7.4.3,<8.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "xgboost (>=3.0.2,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "catboost (>=1.2.8,<2.0.0)",
    "plotly (>=6.1.2,<7.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "lxml (>=5.4.0,<6.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "spacy (>=3.8.7,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "torch (>=2.7.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
